--- a/app/src/main/res/menu/bottom_navigations.xml
+++ b/app/src/main/res/menu/bottom_navigations.xml
@@ -13,7 +13,7 @@
         android:id="@+id/crowdloanFragment"
         android:enabled="true"
         android:icon="@drawable/bottom_crodwloans"
-        android:title="@string/common_crowdloan"
+        android:title="@string/crowdloan_crowdloan"
         app:showAsAction="ifRoom" />
 
     <item
