--- a/feature-dapp-impl/src/main/res/layout/item_dapp_shimmering.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp_shimmering.xml
@@ -11,7 +11,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/bg_shimerring"
+        android:background="@drawable/bg_shimerring_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="66dp"
         android:layout_height="12dp"
         android:layout_marginStart="12dp"
-        android:background="@drawable/bg_shimerring"
+        android:background="@drawable/bg_shimerring_light"
         app:layout_constraintBottom_toTopOf="@+id/itemDappShimerringSubTitle"
         app:layout_constraintStart_toEndOf="@+id/itemDappShimerringIcon"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
         android:layout_height="8dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/bg_shimerring"
+        android:background="@drawable/bg_shimerring_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemDappShimerringIcon"
         app:layout_constraintTop_toBottomOf="@+id/itemDappShimerringTitle" />
