--- a/feature-dapp-impl/src/main/res/values/styles.xml
+++ b/feature-dapp-impl/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     <style name="Widget.Nova.DappCategory.Shimerring" parent="">
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">10dp</item>
-        <item name="android:background">@drawable/bg_shimerring</item>
+        <item name="android:background">@drawable/bg_shimerring_light</item>
         <item name="android:layout_marginEnd">32dp</item>
     </style>
 </resources>
