--- a/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
+++ b/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
@@ -69,7 +69,7 @@
             android:layout_width="150dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_shimerring" />
+            android:background="@drawable/bg_shimerring_light" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -86,7 +86,7 @@
             android:layout_width="100dp"
             android:layout_height="12dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_shimerring" />
+            android:background="@drawable/bg_shimerring_light" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
