--- a/feature-vote/src/main/res/layout/fragment_vote.xml
+++ b/feature-vote/src/main/res/layout/fragment_vote.xml
@@ -34,6 +34,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
