--- a/app/src/main/res/menu/bottom_navigations.xml
+++ b/app/src/main/res/menu/bottom_navigations.xml
@@ -10,10 +10,10 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/crowdloanFragment"
+        android:id="@+id/voteFragment"
         android:enabled="true"
-        android:icon="@drawable/bottom_crodwloans"
-        android:title="@string/crowdloan_crowdloan"
+        android:icon="@drawable/bottom_vote"
+        android:title="@string/vote_vote"
         app:showAsAction="ifRoom" />
 
     <item
