--- a/feature-governance-impl/src/main/res/layout/fragment_referenda_list.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referenda_list.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/accentBlue">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TODO"
-        android:layout_gravity="center"
-        style="@style/TextAppearance.NovaFoundation.Header1" />
+    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.list.VotesView
+        android:id="@+id/votesView"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        app:marginBetweenVotes="6dp"
+        app:negativeColor="#BF3758"
+        app:positiveColor="#15CF37"
+        app:thresholdColor="@color/white"
+        app:thresholdCornerRadius="1.5dp"
+        app:thresholdHeight="11dp"
+        app:minimumLineLength="3dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:thresholdShadowColor="#B8000000"
+        app:thresholdShadowSize="8dp"
+        app:thresholdWidth="3dp"
+        app:votesStrokeWidth="5dp" />
+
 </FrameLayout>
