--- a/feature-governance-impl/src/main/res/layout/item_referenda_header.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_header.xml
@@ -2,10 +2,11 @@
 <io.novafoundation.nova.feature_wallet_api.presentation.view.AssetSelectorView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/referendaAssetHeader"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginBottom="4dp"
     app:actionIcon="@drawable/ic_chevron_down"
     app:backgroundStyle="blurred"
     app:layout_constraintEnd_toEndOf="parent"
