--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -4,10 +4,10 @@
     android:id="@+id/itemCrowdloanGroup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="4dp"
     android:orientation="vertical"
     android:padding="16dp"
-    android:layout_marginVertical="4dp"
-    android:layout_marginHorizontal="16dp"
     tools:background="@color/blurColor">
 
     <FrameLayout
@@ -16,78 +16,122 @@
 
         <TextView
             android:id="@+id/itemReferendumStatus"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:includeFontPadding="false"
             tools:text="PASSING" />
 
         <TextView
             android:id="@+id/itemReferendumTimeEstimate"
+            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:drawablePadding="5dp"
+            android:includeFontPadding="false"
             tools:text="Approve in 3:59:59" />
 
     </FrameLayout>
 
     <TextView
         android:id="@+id/itemReferendumName"
+        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         tools:text="Runtime upgrade to 9280" />
-    <!--
-        <com.google.android.material.chip.ChipGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
 
-        </com.google.android.material.chip.ChipGroup>
-    -->
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="22dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:background="@color/blurColor" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/itemReferendumTrack"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:gravity="center_vertical"
+            android:includeFontPadding="false"
+            android:minHeight="22dp"
+            android:paddingVertical="3dp"
+            android:paddingStart="6dp"
+            android:paddingEnd="8dp"
+            android:textColor="@color/white_64"
+            android:textSize="11sp"
+            tools:background="@color/white_8"
+            tools:drawableStart="@drawable/ic_info_16"
+            tools:text="MAIN TRACK" />
+
+        <TextView
+            android:id="@+id/itemReferendumNumber"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:drawablePadding="6dp"
+            android:gravity="center_vertical"
+            android:includeFontPadding="false"
+            android:minHeight="22dp"
+            android:paddingVertical="3dp"
+            android:paddingStart="6dp"
+            android:paddingEnd="8dp"
+            android:textAllCaps="true"
+            android:textColor="@color/white_64"
+            android:textSize="11sp"
+            tools:background="@color/white_8"
+            tools:text="#237" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/itemReferendumThresholdInfo"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
+        android:includeFontPadding="false"
+        android:textColor="@color/white_64"
         tools:text="Threshold: 16,492 of 15,392.5 KSM " />
 
-    <FrameLayout
+    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.list.VotesView
+        android:id="@+id/itemReferendumVotesView"
+        style="@style/DefaultVotesView"
         android:layout_width="match_parent"
-        android:layout_height="11dp"
-        android:layout_marginTop="11dp"
-        android:background="@color/blurColor" />
+        android:layout_height="25dp" />
 
     <FrameLayout
         android:id="@+id/itemReferendumPercentageDetailsGroup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/itemReferendumPositivePercentage"
+            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:textColor="@color/white_64"
             tools:text="Aye: 80%" />
 
         <TextView
             android:id="@+id/itemReferendumThresholdPercentage"
+            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/white_64"
             tools:text="To pass: 50%" />
 
         <TextView
             android:id="@+id/itemReferendumNegativePercentage"
+            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:textColor="@color/white_64"
             tools:text="Nay: 20%" />
     </FrameLayout>
 
@@ -109,6 +153,7 @@
 
             <TextView
                 android:id="@+id/itemReferendumYourVoteType"
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -120,10 +165,13 @@
 
             <TextView
                 android:id="@+id/itemReferendumYourVoteDetails"
+                style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="6dp"
+                android:includeFontPadding="false"
+                android:textColor="@color/white_64"
                 tools:text="To pass: 50%" />
 
         </LinearLayout>
