--- a/feature-governance-impl/src/main/res/layout/fragment_referenda_list.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referenda_list.xml
@@ -20,9 +20,9 @@
         android:id="@+id/referendaProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:indeterminateTint="@color/white"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </FrameLayout>
