--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -59,6 +59,7 @@
             android:minHeight="22dp"
             android:paddingVertical="3dp"
             android:paddingStart="6dp"
+            android:layout_marginEnd="6dp"
             android:paddingEnd="8dp"
             android:textColor="@color/white_64"
             android:textSize="11sp"
@@ -71,7 +72,6 @@
             style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
             android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:includeFontPadding="false"
