--- a/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
@@ -62,7 +62,7 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/staking_stash_can_hint_v2_2_0" />
 
-            <io.novafoundation.nova.feature_account_api.view.AddressView
+            <io.novafoundation.nova.feature_account_api.view.AccountView
                 android:id="@+id/setControllerStash"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/staking_controller_can_hint_v2_2_0" />
 
-            <io.novafoundation.nova.feature_account_api.view.AddressView
+            <io.novafoundation.nova.feature_account_api.view.AccountView
                 android:id="@+id/setControllerController"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
