--- a/feature-governance-impl/src/main/res/layout/view_votes_overview.xml
+++ b/feature-governance-impl/src/main/res/layout/view_votes_overview.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/itemCrowdloanGroup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="4dp"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:background="@color/blurColor">
+    tools:background="@color/black"
+    tools:parentTag="android.widget.LinearLayout">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -16,12 +15,12 @@
 
         <TextView
             android:id="@+id/itemReferendumStatus"
-            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
+            style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
-            tools:text="Passing" />
+            tools:text="Voting status" />
 
         <TextView
             android:id="@+id/itemReferendumTimeEstimate"
@@ -36,44 +35,20 @@
 
     <TextView
         android:id="@+id/itemReferendumName"
-        style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+        style="@style/TextAppearance.NovaFoundation.Bold.Title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        tools:text="Runtime upgrade to 9280" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/itemReferendumTrack"
-            style="@style/ReferendumChip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="6dp"
-            tools:background="@color/white_8"
-            tools:drawableStart="@drawable/ic_info_16"
-            tools:text="MAIN TRACK" />
-
-        <TextView
-            android:id="@+id/itemReferendumNumber"
-            style="@style/ReferendumChip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:background="@color/white_8"
-            tools:text="#237" />
-
-    </LinearLayout>
+        android:textAllCaps="true"
+        android:textColor="@color/multicolor_green_100"
+        tools:text="PASSING" />
 
     <TextView
         android:id="@+id/itemReferendumThresholdInfo"
         style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:textColor="@color/white_64"
@@ -118,45 +93,22 @@
             tools:text="Nay: 20%" />
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/itemReferendumYourVoiceGroup"
+    <io.novafoundation.nova.feature_governance_impl.presentation.view.VotersView
+        android:id="@+id/positiveVotersDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="16dp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white_8" />
+    <io.novafoundation.nova.feature_governance_impl.presentation.view.VotersView
+        android:id="@+id/negativeVotersDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+    <io.novafoundation.nova.common.view.PrimaryButton
+        style="@style/TextAppearance.NovaFoundation.SemiBold.SubHeadline"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/votes_view_start_vote" />
 
-            <TextView
-                android:id="@+id/itemReferendumYourVoteType"
-                style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/bg_chip"
-                android:includeFontPadding="false"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="4.5dp"
-                tools:text="AYE" />
-
-            <TextView
-                android:id="@+id/itemReferendumYourVoteDetails"
-                style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="6dp"
-                android:includeFontPadding="false"
-                android:textColor="@color/white_64"
-                tools:text="To pass: 50%" />
-
-        </LinearLayout>
-    </FrameLayout>
-</LinearLayout>
+</merge>
