--- a/feature-staking-impl/src/main/res/layout/fragment_validator_details.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_validator_details.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             app:dividerVisible="false" />
 
-        <io.novafoundation.nova.feature_account_api.view.AddressView
+        <io.novafoundation.nova.feature_account_api.view.AccountView
             android:id="@+id/validatorAccountInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
