DI and navigation

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -181,6 +181,7 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
         <action
             android:id="@+id/action_mainFragment_to_setupStakingFragment"
             app:destination="@id/setupStakingFragment"
@@ -340,6 +341,15 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_referendum_details"
+            app:destination="@id/referendumDetailsFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+
     </fragment>
 
 
@@ -487,6 +497,12 @@
         android:name="io.novafoundation.nova.feature_assets.presentation.transaction.detail.transfer.TransferDetailFragment"
         android:label="TransferDetailFragment"
         tools:layout="@layout/fragment_transfer_details" />
+
+    <fragment
+        android:id="@+id/referendumDetailsFragment"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.details.ReferendumDetailsFragment"
+        android:label="ReferendumFragment"
+        tools:layout="@layout/fragment_referendum_details" />
 
     <fragment
         android:id="@+id/extrinsicDetailFragment"
