--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_details.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_details.xml
@@ -106,6 +106,7 @@
                 android:layout_marginTop="12dp" />
 
             <LinearLayout
+                android:id="@+id/referendumTimelineContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
