--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -68,55 +68,11 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/itemReferendumThresholdInfo"
-        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-        android:layout_width="wrap_content"
+    <io.novafoundation.nova.feature_governance_impl.presentation.view.VotingThresholdView
+        android:id="@+id/itemReferendumThreshold"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:gravity="center_vertical"
-        android:includeFontPadding="false"
-        android:textColor="@color/white_64"
-        tools:text="Threshold: 16,492 of 15,392.5 KSM " />
-
-    <io.novafoundation.nova.feature_governance_impl.presentation.view.VotesView
-        android:id="@+id/itemReferendumVotesView"
-        style="@style/DefaultVotesView"
-        android:layout_width="match_parent"
-        android:layout_height="25dp" />
-
-    <FrameLayout
-        android:id="@+id/itemReferendumPercentageDetailsGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/itemReferendumPositivePercentage"
-            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:textColor="@color/white_64"
-            tools:text="Aye: 80%" />
-
-        <TextView
-            android:id="@+id/itemReferendumThresholdPercentage"
-            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/white_64"
-            tools:text="To pass: 50%" />
-
-        <TextView
-            android:id="@+id/itemReferendumNegativePercentage"
-            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textColor="@color/white_64"
-            tools:text="Nay: 20%" />
-    </FrameLayout>
+        android:layout_marginTop="16dp" />
 
     <FrameLayout
         android:id="@+id/itemReferendumYourVoiceGroup"
