--- a/feature-governance-impl/src/main/res/layout/view_referendum_dapp_list.xml
+++ b/feature-governance-impl/src/main/res/layout/view_referendum_dapp_list.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
     android:paddingTop="16dp"
     android:paddingBottom="8dp"
     tools:background="@color/black"
@@ -15,6 +14,7 @@
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="8dp"
         android:text="@string/referendum_dapp_list_title"
         android:textColor="@color/white_64" />
